# Robot_Velma

./: CMakeLists.txt  README.md  package.xml
data/gazebo/: lab2.bt  lab2.ot  lepsze_lab2.bt  lepsze_lab2.ot  octomapa_lab1.ot
data/gazebo/worlds/: stero_blank.world  stero_box_tables.world  szafka.world  szafka_better.world
launch/: proj_1.launch  proj_2.launch  rvizlab1.rviz  velma_stero_system.launch  velma_task_cs_ros_interface.launch
src/: aaa  proj_1.py  proj_2,py  proj_2_backup.py  proj_2_old.py
testy/: initialize_robot.py  reset_head_position.py  set_gripper_configuration.py  switch_to_jimp.py  test_all.py  test_cimp_imp.py  test_cimp_pose.py  test_cimp_tool.py  test_grippers.py  test_head.py  test_head_complex.py  test_jimp.py  test_jimp_endless.py  test_jimp_planning.py  test_jimp_planning_attached.py  test_relax.py
